# cb_base_navigation_msgs

./: CMakeLists.txt  package.xml
action/: LocalPlanner.action
msg/: OrientationConstraint.msg  PoseConstraint.msg  PositionConstraint.msg
srv/: GetPlan.srv
